# lib/api-spec/openapi.yaml
@@ -1,6 +1,5 @@
 openapi: 3.1.0
 info:
-  # Do not change the title, if the title changes, the import paths will be broken
   title: Api
   version: 0.1.0
   description: Twitch Avatar Studio API
@@ -211,6 +210,8 @@ components:
           type: number
         y:
           type: number
+        scale:
+          type: number
 
     PartPositions:
       type: object
@@ -226,9 +227,18 @@ components:
         accessory:
           $ref: "#/components/schemas/PartPosition"
 
+    AccessoryItem:
+      type: object
+      required: [name, color]
+      properties:
+        name:
+          type: string
+        color:
+          type: string
+
     AvatarSettings:
       type: object
-      required: [id, userId, skinTone, hairStyle, hairColor, eyeStyle, eyeColor, mouthStyle, outfitStyle, outfitColor, accessoryColor, voiceId]
+      required: [id, userId, skinTone, hairStyle, hairColor, eyeStyle, eyeColor, eyeWidth, mouthStyle, outfitStyle, outfitColor, accessoryColor, voiceId]
       properties:
         id:
           type: integer
@@ -244,6 +254,8 @@ components:
           type: string
         eyeColor:
           type: string
+        eyeWidth:
+          type: number
         mouthStyle:
           type: string
         outfitStyle:
@@ -254,6 +266,14 @@ components:
           type: ["string", "null"]
         accessoryColor:
           type: string
+        accessories:
+          type: array
+          items:
+            $ref: "#/components/schemas/AccessoryItem"
+        layerOrder:
+          type: array
+          items:
+            type: string
         voiceId:
           type: string
         partPositions:
@@ -261,7 +281,7 @@ components:
 
     AvatarInput:
       type: object
-      required: [skinTone, hairStyle, hairColor, eyeStyle, eyeColor, mouthStyle, outfitStyle, outfitColor, accessoryColor, voiceId]
+      required: [skinTone, hairStyle, hairColor, eyeStyle, eyeColor, eyeWidth, mouthStyle, outfitStyle, outfitColor, accessoryColor, voiceId]
       properties:
         skinTone:
           type: string
@@ -273,6 +293,8 @@ components:
           type: string
         eyeColor:
           type: string
+        eyeWidth:
+          type: number
         mouthStyle:
           type: string
         outfitStyle:
@@ -283,6 +305,14 @@ components:
           type: ["string", "null"]
         accessoryColor:
           type: string
+        accessories:
+          type: array
+          items:
+            $ref: "#/components/schemas/AccessoryItem"
+        layerOrder:
+          type: array
+          items:
+            type: string
         voiceId:
           type: string
         partPositions:
